kubernetes/apps/plik/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plik
  namespace: plik
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: https://plik.lafranque.net/favicon.ico
    gethomepage.dev/name: Plik
    gethomepage.dev/group: Tools
    gethomepage.dev/description: Temporary file sharing
spec:
  parentRefs:
    - name: one-gateway-for-all
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - plik.lafranque.net
    - plik-download.lafranque.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: plik
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plik-http-redirect
  namespace: plik
spec:
  parentRefs:
    - name: one-gateway-for-all
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - plik.lafranque.net
    - plik-download.lafranque.net
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
